# NetFlowGuard

./: README.md
Backend/: README.md
Backend/Actor/: Makefile  actor_api.py  actor_api_spec.md  forward.ini  meson.build  node_config.json  package.json  rebuild.sh
Backend/Actor/src/: core_capture.c  core_capture.h  core_write.c  core_write.h  dpdkcap.c  drl_telemetry.h  flow_extractor.c  flow_extractor.h  generate_query.c  mysql_op.c  mysql_op.h  statistics.c  statistics.h  statistics_ncurses.c
Backend/Actor/src/dpdk_lgbm_c_model/: header.h  main.c  recipe.json  tu0.c
Backend/Actor/src/model/: model.onnx
Backend/Learner/: .gitignore  Makefile  actor_api_spec.md  actor_ip.ini  forward.ini  learner_api_spec.md  learner_backend.py  meson.build  node_config.json  package.json  schedule_rl.py
Backend/Learner/src/: core_capture.c  core_capture.h  core_write.c  core_write.h  dpdkcap.c  flow_extractor.c  flow_extractor.h  generate_query.c  mysql_op.c  mysql_op.h  statistics.c  statistics.h
Backend/Learner/test/: read_shm.py  test_ws.py
Frontend/: README.md  deploy_nginx.conf  package-lock.json  package.json  vite.config.js
